added animation to the search bar

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
       </div>
 
       <img src="./accessts/icons/menu.png" alt="menu-icon" class="menu-icon" />
-
-      <!-- For mobile menu if needed -->
     </header>
     <div class="banner">
       <div class="search-container">
+        <div>
+          <img src="./accessts/images/cat-removebg-preview.png" class="anime" />
+        </div>
         <input
           type="text"
           id="search-input"
