little change updated

--- a/index1.html
+++ b/index1.html
@@ -864,8 +864,8 @@
         setTimeout(
           () =>
             speak([
-              "Hello. I am Cat-AI. Welcome to your Meal Finder interface.",
-              "Click the cat again to return to normal.",
+              "Hey, Hello, I am Beru, Assistant to the Master Ram Kumar. Welcome to your Meal Finder interface.",
+              "You can search and select you favorite food below",
             ]),
           560
         );
